kustomization/components/networkpolicy-allow-from-prometheus/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-prometheus-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        # A `Pod` that names its port differently, or that gives more than one
        # port, needs a patch in its overlay.
        - port: metrics
          protocol: TCP
  podSelector:
    matchLabels:
      hogs.tswn.us/prometheus-target: "true"
  policyTypes:
    - Ingress
